@@ -15,4 +15,4 @@ CLOCK_FONT = ('Consolas', 24, 'bold')
 POMO_WORK_TIME = int(mgr.get("SETTINGS", "POMO_WORK_TIME")) # in seconds
 POMO_BREAK_TIME = int(mgr.get("SETTINGS", "POMO_BREAK_TIME")) # in seconds
 
-AUTO_SAVE = mgr.get("SETTINGS", "AUTO_SAVE")
+AUTOSAVE = mgr.get("SETTINGS", "AUTOSAVE")
